--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
 spring.application.name=uno-server
 spring.config.import=optional:file:.env.properties
 spring.datasource.url=${SPRING_DATASOURCE_URL}
+spring.jpa.hibernate.ddl-auto=create
